Uzupełnienie plików zadań i projektów końcowych

--- a/py10flask/.gitignore
+++ b/py10flask/.gitignore
@@ -5,3 +5,9 @@ venv
 acc
 ten_kod_działa.py
 html_examples.html
+main_menu_paski.html
+main_dziala.html
+index_dziala.html
+main_kurs.html
+index_kurs.html
+app_kurs.py
