--- a/py10flask/lib/requirements.txt
+++ b/py10flask/lib/requirements.txt
@@ -1,8 +1,22 @@
+atomicwrites==1.4.0
+attrs==21.2.0
 click==8.0.1
 colorama==0.4.4
+css==0.1
+dj-database-url==0.5.0
 Flask==2.0.1
+gulp==0.1.0
+iniconfig==1.1.1
 install==1.3.4
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
+packaging==21.0
+pluggy==0.13.1
+psycopg2-binary==2.9.1
+py==1.10.0
+pyparsing==2.4.7
+pytest==6.2.4
+spectre==0.0.1
+toml==0.10.2
 Werkzeug==2.0.1
